[package]
name = "rocket-tests"
version = "0.1.0"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
curl = "0.4.22"
reqwest = "0.9.18"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
